# net-markfaine

./: .ansible-lint  .env  .gitignore  .gitmodules  .markdownlint.json  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  README.md  bootstrap.sh  galaxy.yml  inventory.yml  mise.toml  pyproject.toml
inventory/: inventory.yml
inventory/group_vars/all/: vars.yml
meta/: runtime.yml
molecule/absent/: converge.yml  destroy.yml  molecule.yml  prepare.yml  verify.yml
molecule/default/: converge.yml  molecule.yml  prepare.yml  verify.yml
playbooks/: docker.yml  doppler.yml  dotfiles.yml  fonts.yml  packages.yml  playbook.yml  site.yml  user.yml  wsl.yml
plugins/: README.md
roles/: latest
roles/apt/: README.md
roles/apt/defaults/: main.yml
roles/apt/meta/: main.yml
roles/apt/tasks/: main.yml
roles/apt/tests/: test-absent.yml  test-present.yml  test.yml
roles/asdf/files/: tools.versions  update_tools.sh
roles/asdf/tasks/: absent.yml  main.yml  present.yml
roles/asdf/vars/: main.yml
roles/base/defaults/: main.yml
roles/base/tasks/: absent.yml  main.yml  present.yml
roles/base/vars/: main.yml
roles/bash/tasks/: absent.yml  main.yml  present.yml
roles/docker/: README.md
roles/docker/defaults/: main.yml
roles/docker/handlers/: main.yml
roles/docker/meta/: main.yml
roles/docker/tasks/: absent.yml  main.yml  present.yml
roles/docker/templates/: docker.conf.j2  docker.mon.j2  docker.service.conf.j2  nftables.conf.j2
roles/docker/tests/: test-absent.yml  test-present.yml
roles/docker/vars/: main.yml
roles/doppler/: README.md
roles/doppler/defaults/: main.yml
roles/doppler/meta/: main.yml
roles/doppler/tasks/: install_doppler.yml  main.yml
roles/doppler/templates/: setup_doppler_env.sh.j2
roles/doppler/tests/: test-absent.yml  test-present.yml
roles/doppler/vars/: main.yml
roles/dotfiles/: README.md
roles/dotfiles/defaults/: main.yml
roles/dotfiles/files/: setup.sh
roles/dotfiles/meta/: main.yml
roles/dotfiles/tasks/: main.yml  process_dotfiles.yml
roles/dotfiles/tests/: test-absent.yml  (+2 more)
roles/fonts/: README.md
roles/mise/: README.md
roles/user/: README.md
roles/wsl/: README.md
scripts/: install_collection.sh
tasks/: create-fail.yml
(+142 files in other folders)
